--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,34 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyB7lbkpXJdGH4SDInVfBxWryJc6FXDXZ1E",
+      authDomain: "chat-plus-plus.firebaseapp.com",
+      databaseURL: "https://chat-plus-plus.firebaseio.com",
+      projectId: "chat-plus-plus",
+      storageBucket: "chat-plus-plus.appspot.com",
+      messagingSenderId: "310062968887",
+      appId: "1:310062968887:web:9c55051167e26b20d20fb2",
+      measurementId: "G-P0R44136LE"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
   <app-root></app-root>
+
 </body>
+
 </html>
